[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Black.png" type="Texture" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.4 )
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 2 )

[node name="Continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.5
margin_top = -10.0
margin_right = 34.5
margin_bottom = 10.0
text = "Continue"
flat = true

[node name="Fullscreen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -33.0
margin_right = 39.0
margin_bottom = -13.0
text = "Fullscreen"
flat = true

[node name="MainMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = 14.0
margin_right = 68.0
margin_bottom = 34.0
text = "Back to main menu"
flat = true

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
